tests/samples/positive/types/str_slice.ax
module str_slice;

fn addr(text: str) -> usize {
    return ptraddr(strptr(text));
}

fn main() -> i32 {
    let ascii: str = "abcdef";
    let ascii_base = addr(ascii);
    let ascii_mid = ascii[1:4];
    let ascii_prefix = ascii[:2];
    let ascii_suffix = ascii[2:];
    let ascii_all = ascii[:];
    if strblen(ascii_mid) != 3usize || addr(ascii_mid) != ascii_base + 1usize {
        return 1;
    }
    if strblen(ascii_prefix) != 2usize || addr(ascii_prefix) != ascii_base {
        return 2;
    }
    if strblen(ascii_suffix) != 4usize || addr(ascii_suffix) != ascii_base + 2usize {
        return 3;
    }
    if strblen(ascii_all) != 6usize || addr(ascii_all) != ascii_base {
        return 4;
    }

    let unicode_bytes: [6]u8 = [0x61u8, 0xCEu8, 0xBBu8, 0xE2u8, 0x82u8, 0xACu8];
    let unicode: str = strfromutf8(unicode_bytes[:]);
    let unicode_base = addr(unicode);
    let letter = unicode[1:3];
    let symbol = unicode[3:6];
    let valid_empty = unicode[3:3];
    if strblen(unicode) != 6usize {
        return 5;
    }
    if strblen(letter) != 2usize || addr(letter) != unicode_base + 1usize {
        return 6;
    }
    if strblen(symbol) != 3usize || addr(symbol) != unicode_base + 3usize {
        return 7;
    }
    if strblen(valid_empty) != 0usize || addr(valid_empty) != unicode_base + 3usize {
        return 8;
    }

    let invalid_start = unicode[2:3];
    let invalid_end = unicode[1:2];
    let invalid_empty = unicode[2:2];
    let reversed = ascii[4:2];
    let too_far = ascii[:99];
    if strblen(invalid_start) != 0usize || addr(invalid_start) != 0usize {
        return 9;
    }
    if strblen(invalid_end) != 0usize || addr(invalid_end) != 0usize {
        return 10;
    }
    if strblen(invalid_empty) != 0usize || addr(invalid_empty) != 0usize {
        return 11;
    }
    if strblen(reversed) != 0usize || addr(reversed) != 0usize {
        return 12;
    }
    if strblen(too_far) != 0usize || addr(too_far) != 0usize {
        return 13;
    }
    return 0;
}
